kubernetes/base/00-registry-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-database
  template:
    metadata:
      labels:
        app: registry-database
    spec:
      volumes:
      - name: registry-database-vol
        persistentVolumeClaim:
          claimName: registry-database-pvc
      containers:
      - name: registry-database
        image: postgres:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: registry-database-vol
        ports:
        - containerPort: 5432
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: registry-database-svc
  labels:
    app: registry-database
spec:
  type: ClusterIP
  selector:
    app: registry-database
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
