kubernetes/base/01-registry-server.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# Deployment for the Registry Server
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-server
spec:
  selector:
    matchLabels:
      app: registry-server
  template:
    metadata:
      labels:
        app: registry-server
    spec:
      containers:
      - name: registry-server
        image: ghcr.io/apigee/registry-server:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: registry-server-grpc
spec:
  type: ClusterIP
  selector:
    app: registry-server
  ports:
  - protocol: TCP
    name: grpc-port
    port: 8080
    targetPort: 8080
