kubernetes/base/02-registry-envoy.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# Deployment for Envoy proxy to use with the Registry Server
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-envoy
spec:
  selector:
    matchLabels:
      app: registry-envoy
  template:
    metadata:
      labels:
        app: registry-envoy
    spec:
      containers:
      - name: envoy
        image: ghcr.io/apigee/registry-envoy:main
        imagePullPolicy: Always
        ports:
        - name: admin-port
          containerPort: 9901
        - name: envoy-port
          containerPort: 9999
#        resources:
#          requests:
#            cpu: 10m
#            ephemeral-storage: 256Mi
#            memory: 256Mi
        readinessProbe:
          httpGet:
            port: admin-port
            path: /ready
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            port: admin-port
            path: /ready
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: registry-envoy-http-lb
  annotations:
    cloud.google.com/app-protocols: '{"envoy-port":"HTTP", "admin-port": "HTTP"}'
    cloud.google.com/backend-config: '{"ports": {"9999":"registry-server-envoy-backendconfig"}}'
spec:
  type: NodePort
  selector:
    app: registry-envoy
  ports:
  - name: admin-port
    protocol: TCP
    port: 9901
    targetPort: 9901
  - name: envoy-port
    protocol: TCP
    port: 9999
    targetPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: registry-server-external-lb
spec:
  type: LoadBalancer
  selector:
    app: registry-envoy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: registry-server-internal-lb
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: registry-envoy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9999
