kubernetes/base/07-registry-spec-render.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# Deployment for the Registry Spec Renderer
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-spec-renderer
  labels:
    app: registry-spec-renderer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-spec-renderer
  template:
    metadata:
      name: registry-spec-renderer
      labels:
        app: registry-spec-renderer
    spec:
      containers:
      - name: webapp
        image: ghcr.io/apigee/registry-spec-renderer:main
        ports:
        - name: renderer-port
          containerPort: 8888
        readinessProbe:
          httpGet:
            port: renderer-port
            path: /healthz
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            port: renderer-port
            path: /healthz
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: registry-spec-renderer-cluster-lb
spec:
  type: ClusterIP
  selector:
    app: registry-spec-renderer
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
