kubernetes/base/04-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-app-ingress
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: registry-app-frontend
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name:  registry-app-cluster-lb
      port:
        number: 8888
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/google.cloud.apigeeregistry.v1.Admin/*"
        backend:
          service:
            name: registry-envoy-http-lb
            port:
              number: 9999
      - pathType: ImplementationSpecific
        path: "/google.cloud.apigeeregistry.v1.Registry/*"
        backend:
          service:
            name: registry-envoy-http-lb
            port:
              number: 9999
      - pathType: ImplementationSpecific
        path: "/render/*"
        backend:
          service:
            name: registry-spec-renderer-cluster-lb
            port:
              number: 8888
      - pathType: ImplementationSpecific
        path: "/renderer/*"
        backend:
          service:
            name: registry-spec-renderer-cluster-lb
            port:
              number: 8888
      - pathType: ImplementationSpecific
        path: "/spec/*"
        backend:
          service:
            name: registry-spec-renderer-cluster-lb
            port:
              number: 8888
